--- a/index.html
+++ b/index.html
@@ -240,39 +240,41 @@
 
   <!-- Hauptinhalt -->
   <main class="content" role="main">
-    <div id="content-pt">
-      <h1>Kaussen Serviços – Soluções completas para sua obra</h1>
-      <div class="services">
-        <p><i class="fas fa-paint-roller"></i> Pintura e trabalhos de acabamento</p>
-        <p><i class="fas fa-tools"></i> Reformas em geral</p>
-        <p><i class="fas fa-fire"></i> Soldagem e estruturas metálicas</p>
-        <p><i class="fas fa-bolt"></i> Instalações elétricas</p>
-      </div>
-      <p style="margin-top: 20px;">Atendimento com excelência e dedicação em cada projeto.</p>
-    </div>
+    <div id="content-pt" style="display:none">
+  <h1>Kaussen Serviços – Soluções completas para sua obra</h1>
+  <div class="services">
+    <p><i class="fas fa-paint-roller"></i> Pintura e trabalhos de acabamento</p>
+    <p><i class="fas fa-tools"></i> Reformas em geral</p>
+    <p><i class="fas fa-hammer"></i> Drywall (Trockenbau)</p>
+    <p><i class="fas fa-fire"></i> Soldagem e estruturas metálicas</p>
+    <p><i class="fas fa-bolt"></i> Instalações elétricas</p>
+  </div>
+  <p style="margin-top: 20px;">Atendimento com excelência e dedicação em cada projeto.</p>
+</div>
 
-    <div id="content-de" style="display:none">
-      <h1>Kaussen Serviços – Ihr Partner für Bau und Renovierung</h1>
-      <div class="services">
-        <p><i class="fas fa-paint-roller"></i> Maler- und Lackierarbeiten</p>
-        <p><i class="fas fa-tools"></i> Allgemeine Reformierungen</p>
-        <p><i class="fas fa-hammer"></i> Trockenbau (Drywall)</p>
-        <p><i class="fas fa-fire"></i> Schweißarbeiten</p>
-        <p><i class="fas fa-bolt"></i> Elektroinstallationen</p>
-      </div>
-      <p style="margin-top: 20px;">Verlassen Sie sich auf Qualität, Zuverlässigkeit und europäisch/brasilianisches Handwerkskönnen.</p>
-    </div>
+<div id="content-de" style="display:none">
+  <h1>Kaussen Serviços – Ihr Partner für Bau und Renovierung</h1>
+  <div class="services">
+    <p><i class="fas fa-paint-roller"></i> Maler- und Lackierarbeiten</p>
+    <p><i class="fas fa-tools"></i> Allgemeine Reformierungen</p>
+    <p><i class="fas fa-hammer"></i> Trockenbau (Drywall)</p>
+    <p><i class="fas fa-fire"></i> Schweißarbeiten</p>
+    <p><i class="fas fa-bolt"></i> Elektroinstallationen</p>
+  </div>
+  <p style="margin-top: 20px;">Verlassen Sie sich auf Qualität, Zuverlässigkeit und europäisch/brasilianisches Handwerkskönnen.</p>
+</div>
 
-    <div id="content-en" style="display:none">
-      <h1>Kaussen Serviços – Complete solutions for your construction needs</h1>
-      <div class="services">
-        <p><i class="fas fa-paint-roller"></i> Painting and finishing work</p>
-        <p><i class="fas fa-tools"></i> General renovations</p>
-        <p><i class="fas fa-fire"></i> Welding and metal structures</p>
-        <p><i class="fas fa-bolt"></i> Electrical installations</p>
-      </div>
-      <p style="margin-top: 20px;">Excellence and dedication in every project.</p>
-    </div>
+<div id="content-en" style="display:none">
+  <h1>Kaussen Serviços – Complete solutions for your construction needs</h1>
+  <div class="services">
+    <p><i class="fas fa-paint-roller"></i> Painting and finishing work</p>
+    <p><i class="fas fa-tools"></i> General renovations</p>
+    <p><i class="fas fa-hammer"></i> Drywall (Trockenbau)</p>
+    <p><i class="fas fa-fire"></i> Welding and metal structures</p>
+    <p><i class="fas fa-bolt"></i> Electrical installations</p>
+  </div>
+  <p style="margin-top: 20px;">Excellence and dedication in every project.</p>
+</div>
 
     <a class="whatsapp-button" href="https://wa.me/5511941188664" target="_blank" rel="noopener">
       <i class="fab fa-whatsapp"></i> Fale conosco pelo WhatsApp
