Update150825/1 index.html

--- a/index.html
+++ b/index.html
@@ -277,8 +277,9 @@
 </div>
 
     <a class="whatsapp-button" href="https://wa.me/5511941188664" target="_blank" rel="noopener">
-      <i class="fab fa-whatsapp"></i> Fale conosco pelo WhatsApp
-    </a>
+    <i class="fab fa-whatsapp"></i> <span id="whatsapp-text"></span>
+</a>
+
 <!-- Erweiterte Leistungen auf Portugiesisch -->
 <section style="margin-top:40px; display:none;" id="servicos-detalhados-pt">
   <h2>Serviços de pintura e revestimento com qualidade e experiência</h2>
