Update150825/3 index.html

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ function changeLanguage(lang) {
     en: "Contact us via WhatsApp"
   };
   
-  const whatsappText = document.getElementById('whatsappText');
+  const whatsappText = document.getElementById('whatsapp-text');
   if (whatsappText) {
       whatsappText.textContent = whatsappTexts[lang];
   }
