Update150825/4 index.html

--- a/index.html
+++ b/index.html
@@ -330,6 +330,10 @@
   <a href="#img4"><img src="malen4.jpg" alt="Spritzlackierung" loading="lazy"></a>
 </div>
 
+    <a class="whatsapp-button" href="https://wa.me/5511941188664" target="_blank" rel="noopener">
+    <i class="fab fa-whatsapp"></i> <span class="whatsapp-text"></span>
+</a>
+
 <!-- Lightbox-Container -->
 <div id="img1" class="lightbox" onclick="location.href='#'">
   <img src="malen1.jpg" alt="Innenanstrich">
@@ -393,6 +397,10 @@
   <img src="bild3.jpg" alt="schweissen3"loading="lazy">
   <img src="bild4.jpg" alt="schweissen4"loading="lazy">
 </div>
+
+    <a class="whatsapp-button" href="https://wa.me/5511941188664" target="_blank" rel="noopener">
+    <i class="fab fa-whatsapp"></i> <span class="whatsapp-text"></span>
+</a>
 
 <!-- Drywall – Português -->
 <section style="margin-top:40px; display:none;" id="drywall-pt">
