--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 </div>
 
     <a class="whatsapp-button" href="https://wa.me/5511941188664" target="_blank" rel="noopener">
-    <i class="fab fa-whatsapp"></i> <span id="whatsapp-text"></span>
+    <i class="fab fa-whatsapp"></i> <span class="whatsapp-text"></span>
 </a>
 
 <!-- Erweiterte Leistungen auf Portugiesisch -->
