--- a/index.html
+++ b/index.html
@@ -391,12 +391,19 @@
 </section>
  
 <!-- Bildergalerie für Schweißarbeiten -->
-<div class="image-gallery">
-  <img src="bild1.jpg" alt="schweissen1"loading="lazy">
-  <img src="bild2.jpg" alt="schweissen2"loading="lazy">
-  <img src="bild3.jpg" alt="schweissen3"loading="lazy">
-  <img src="bild4.jpg" alt="schweissen4"loading="lazy">
+<div class="image-gallery welding-gallery">
+  <a href="#w-img1"><img src="schweissen1.jpg" alt="Schweißen 1" loading="lazy"></a>
+  <a href="#w-img2"><img src="schweissen2.jpg" alt="Schweißen 2" loading="lazy"></a>
+  <a href="#w-img3"><img src="schweissen3.jpg" alt="Schweißen 3" loading="lazy"></a>
+  <a href="#w-img4"><img src="schweissen4.jpg" alt="Schweißen 4" loading="lazy"></a>
 </div>
+
+<!-- Lightbox-Container -->
+<div id="w-img1" class="lightbox" onclick="location.href='#'"><img src="schweissen1.jpg" alt="Schweißen 1"></div>
+<div id="w-img2" class="lightbox" onclick="location.href='#'"><img src="schweissen2.jpg" alt="Schweißen 2"></div>
+<div id="w-img3" class="lightbox" onclick="location.href='#'"><img src="schweissen3.jpg" alt="Schweißen 3"></div>
+<div id="w-img4" class="lightbox" onclick="location.href='#'"><img src="schweissen4.jpg" alt="Schweißen 4"></div>
+
 
     <a class="whatsapp-button" href="https://wa.me/5511941188664" target="_blank" rel="noopener">
     <i class="fab fa-whatsapp"></i> <span class="whatsapp-text"></span>
@@ -444,6 +451,20 @@
   <p><strong>Why Kaussen?</strong> We combine European craftsmanship with Brazilian flexibility – for results that impress.</p>
 </section>
 
+    <div class="image-gallery drywall-gallery">
+  <a href="#d-img1"><img src="drywall1.jpg" alt="Drywall 1" loading="lazy"></a>
+  <a href="#d-img2"><img src="drywall2.jpg" alt="Drywall 2" loading="lazy"></a>
+  <a href="#d-img3"><img src="drywall3.jpg" alt="Drywall 3" loading="lazy"></a>
+  <a href="#d-img4"><img src="drywall4.jpg" alt="Drywall 4" loading="lazy"></a>
+</div>
+
+<!-- Lightbox-Container -->
+<div id="d-img1" class="lightbox" onclick="location.href='#'"><img src="drywall1.jpg" alt="Drywall 1"></div>
+<div id="d-img2" class="lightbox" onclick="location.href='#'"><img src="drywall2.jpg" alt="Drywall 2"></div>
+<div id="d-img3" class="lightbox" onclick="location.href='#'"><img src="drywall3.jpg" alt="Drywall 3"></div>
+<div id="d-img4" class="lightbox" onclick="location.href='#'"><img src="drywall4.jpg" alt="Drywall 4"></div>
+
+
 <style>
   .image-gallery {
   display: flex;
@@ -454,7 +475,7 @@
 }
 
 .image-gallery a {
-  flex: 1 1 22%;
+  flex: 1 1 22%; /* vier Bilder nebeneinander */
   max-width: none;
 }
 
@@ -471,14 +492,9 @@
   transform: scale(1.03);
 }
 
-.painting-gallery img {
-  cursor: pointer;
-  transition: transform 0.2s ease;
-}
-
 @media (max-width: 720px) {
   .image-gallery a {
-    flex: 1 1 46%;
+    flex: 1 1 46%; /* zwei Bilder nebeneinander auf Mobil */
     max-width: 140px;
   }
 }
