Update150825/12 index.html

--- a/index.html
+++ b/index.html
@@ -324,11 +324,12 @@
 
     <!-- Bildergalerie für Maler- und Lackierarbeiten -->
 <div class="image-gallery painting-gallery">
-  <a href="#img1"><img src="malen1.jpg" alt="Innenanstrich" loading="lazy"></a>
-  <a href="#img2"><img src="malen2.jpg" alt="Fassadenanstrich" loading="lazy"></a>
-  <a href="#img3"><img src="malen3.jpg" alt="Torlackierung" loading="lazy"></a>
-  <a href="#img4"><img src="malen4.jpg" alt="Spritzlackierung" loading="lazy"></a>
+  <a href="#img1"><img src="malen1.webp" alt="Innenanstrich" loading="lazy"></a>
+  <a href="#img2"><img src="malen2.webp" alt="Fassadenanstrich" loading="lazy"></a>
+  <a href="#img3"><img src="malen3.webp" alt="Torlackierung" loading="lazy"></a>
+  <a href="#img4"><img src="malen4.webp" alt="Spritzlackierung" loading="lazy"></a>
 </div>
+
 
     <a class="whatsapp-button" href="https://wa.me/5511941188664" target="_blank" rel="noopener">
     <i class="fab fa-whatsapp"></i> <span class="whatsapp-text"></span>
@@ -336,16 +337,16 @@
 
 <!-- Lightbox-Container -->
 <div id="img1" class="lightbox" onclick="location.href='#'">
-  <img src="malen1.jpg" alt="Innenanstrich">
+  <img src="malen1.webp" alt="Innenanstrich">
 </div>
 <div id="img2" class="lightbox" onclick="location.href='#'">
-  <img src="malen2.jpg" alt="Fassadenanstrich">
+  <img src="malen2.webp" alt="Fassadenanstrich">
 </div>
 <div id="img3" class="lightbox" onclick="location.href='#'">
-  <img src="malen3.jpg" alt="Torlackierung">
+  <img src="malen3.webp" alt="Torlackierung">
 </div>
 <div id="img4" class="lightbox" onclick="location.href='#'">
-  <img src="malen4.jpg" alt="Spritzlackierung">
+  <img src="malen4.webp" alt="Spritzlackierung">
 </div>
 
    <!-- Reparaturen & Schweißarbeiten – Deutsch -->
@@ -392,18 +393,17 @@
  
 <!-- Bildergalerie für Schweißarbeiten -->
 <div class="image-gallery welding-gallery">
-  <a href="#w-img1"><img src="schweissen1.jpg" alt="Schweißen 1" loading="lazy"></a>
-  <a href="#w-img2"><img src="schweissen2.jpg" alt="Schweißen 2" loading="lazy"></a>
-  <a href="#w-img3"><img src="schweissen3.jpg" alt="Schweißen 3" loading="lazy"></a>
-  <a href="#w-img4"><img src="schweissen4.jpg" alt="Schweißen 4" loading="lazy"></a>
+  <a href="#w-img1"><img src="schweissen1.webp" alt="Schweißen 1" loading="lazy"></a>
+  <a href="#w-img2"><img src="schweissen2.webp" alt="Schweißen 2" loading="lazy"></a>
+  <a href="#w-img3"><img src="schweissen3.webp" alt="Schweißen 3" loading="lazy"></a>
+  <a href="#w-img4"><img src="schweissen4.webp" alt="Schweißen 4" loading="lazy"></a>
 </div>
 
 <!-- Lightbox-Container -->
-<div id="w-img1" class="lightbox" onclick="location.href='#'"><img src="schweissen1.jpg" alt="Schweißen 1"></div>
-<div id="w-img2" class="lightbox" onclick="location.href='#'"><img src="schweissen2.jpg" alt="Schweißen 2"></div>
-<div id="w-img3" class="lightbox" onclick="location.href='#'"><img src="schweissen3.jpg" alt="Schweißen 3"></div>
-<div id="w-img4" class="lightbox" onclick="location.href='#'"><img src="schweissen4.jpg" alt="Schweißen 4"></div>
-
+<div id="w-img1" class="lightbox" onclick="location.href='#'"><img src="schweissen1.webp" alt="Schweißen 1"></div>
+<div id="w-img2" class="lightbox" onclick="location.href='#'"><img src="schweissen2.webp" alt="Schweißen 2"></div>
+<div id="w-img3" class="lightbox" onclick="location.href='#'"><img src="schweissen3.webp" alt="Schweißen 3"></div>
+<div id="w-img4" class="lightbox" onclick="location.href='#'"><img src="schweissen4.webp" alt="Schweißen 4"></div>
 
     <a class="whatsapp-button" href="https://wa.me/5511941188664" target="_blank" rel="noopener">
     <i class="fab fa-whatsapp"></i> <span class="whatsapp-text"></span>
@@ -451,19 +451,19 @@
   <p><strong>Why Kaussen?</strong> We combine European craftsmanship with Brazilian flexibility – for results that impress.</p>
 </section>
 
-    <div class="image-gallery drywall-gallery">
-  <a href="#d-img1"><img src="drywall1.jpg" alt="Drywall 1" loading="lazy"></a>
-  <a href="#d-img2"><img src="drywall2.jpg" alt="Drywall 2" loading="lazy"></a>
-  <a href="#d-img3"><img src="drywall3.jpg" alt="Drywall 3" loading="lazy"></a>
-  <a href="#d-img4"><img src="drywall4.jpg" alt="Drywall 4" loading="lazy"></a>
+    <!-- Bildergalerie für Drywall -->
+<div class="image-gallery drywall-gallery">
+  <a href="#d-img1"><img src="drywall1.webp" alt="Drywall 1" loading="lazy"></a>
+  <a href="#d-img2"><img src="drywall2.webp" alt="Drywall 2" loading="lazy"></a>
+  <a href="#d-img3"><img src="drywall3.webp" alt="Drywall 3" loading="lazy"></a>
+  <a href="#d-img4"><img src="drywall4.webp" alt="Drywall 4" loading="lazy"></a>
 </div>
 
 <!-- Lightbox-Container -->
-<div id="d-img1" class="lightbox" onclick="location.href='#'"><img src="drywall1.jpg" alt="Drywall 1"></div>
-<div id="d-img2" class="lightbox" onclick="location.href='#'"><img src="drywall2.jpg" alt="Drywall 2"></div>
-<div id="d-img3" class="lightbox" onclick="location.href='#'"><img src="drywall3.jpg" alt="Drywall 3"></div>
-<div id="d-img4" class="lightbox" onclick="location.href='#'"><img src="drywall4.jpg" alt="Drywall 4"></div>
-
+<div id="d-img1" class="lightbox" onclick="location.href='#'"><img src="drywall1.webp" alt="Drywall 1"></div>
+<div id="d-img2" class="lightbox" onclick="location.href='#'"><img src="drywall2.webp" alt="Drywall 2"></div>
+<div id="d-img3" class="lightbox" onclick="location.href='#'"><img src="drywall3.webp" alt="Drywall 3"></div>
+<div id="d-img4" class="lightbox" onclick="location.href='#'"><img src="drywall4.webp" alt="Drywall 4"></div>
 
 <style>
   .image-gallery {
