Update1708/1 index.html

--- a/index.html
+++ b/index.html
@@ -465,6 +465,10 @@
 <div id="d-img3" class="lightbox" onclick="location.href='#'"><img src="drywall3.webp" alt="Drywall 3"></div>
 <div id="d-img4" class="lightbox" onclick="location.href='#'"><img src="drywall4.webp" alt="Drywall 4"></div>
 
+    <a class="whatsapp-button" href="https://wa.me/5511941188664" target="_blank" rel="noopener">
+    <i class="fab fa-whatsapp"></i> <span class="whatsapp-text"></span>
+</a>
+
 <style>
   .image-gallery {
   display: flex;
